--- a/index.html
+++ b/index.html
@@ -15,25 +15,29 @@
     </form>
 
     <main id="main">
-        <div>
-            <img src="https://randomuser.me/api/portraits/men/24.jpg" alt="" class="avatar">
-        </div>
-        <div class="user-info">
-            <h3 class="name">Brad Traversy</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam iure corporis nesciunt dolor ea officiis
-                optio voluptates.</p>
-            <ul>
-                <li>3000 <strong>Followers</strong></li>
-                <li>2312 <strong>Following</strong></li>
-                <li>32 <strong>Repos</strong></li>
-            </ul>
-            <div id="repos">
+        <div class="card">
+            <div>
+                <img src="https://randomuser.me/api/portraits/men/24.jpg" alt="" class="avatar">
+            </div>
+
+            <div class="user-info">
+                <h3 class="name">Brad Traversy</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam iure corporis nesciunt dolor ea
+                    officiis
+                    optio voluptates.</p>
                 <ul>
-                    <a href="" class="repos">Repo 1</a>
-                    <a href="" class="repos">Repo 2</a>
-                    <a href="" class="repos">Repo 3</a>
-                    <a href="" class="repos">Repo 4</a>
+                    <li>3000 <strong>Followers</strong></li>
+                    <li>2312 <strong>Following</strong></li>
+                    <li>32 <strong>Repos</strong></li>
                 </ul>
+                <div id="repos">
+                    <ul>
+                        <a href="" class="repo">Repo 1</a>
+                        <a href="" class="repo">Repo 2</a>
+                        <a href="" class="repo">Repo 3</a>
+                        <a href="" class="repo">Repo 4</a>
+                    </ul>
+                </div>
             </div>
         </div>
     </main>
