--- a/index.html
+++ b/index.html
@@ -14,33 +14,7 @@
         <input type="text" placeholder="Search a GitHub User" id="search">
     </form>
 
-    <main id="main">
-        <div class="card">
-            <div>
-                <img src="https://randomuser.me/api/portraits/men/24.jpg" alt="" class="avatar">
-            </div>
-
-            <div class="user-info">
-                <h3 class="name">Brad Traversy</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam iure corporis nesciunt dolor ea
-                    officiis
-                    optio voluptates.</p>
-                <ul>
-                    <li>3000 <strong>Followers</strong></li>
-                    <li>2312 <strong>Following</strong></li>
-                    <li>32 <strong>Repos</strong></li>
-                </ul>
-                <div id="repos">
-                    <ul>
-                        <a href="" class="repo">Repo 1</a>
-                        <a href="" class="repo">Repo 2</a>
-                        <a href="" class="repo">Repo 3</a>
-                        <a href="" class="repo">Repo 4</a>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </main>
+    <main id="main"></main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.4/axios.min.js"
         integrity="sha512-LUKzDoJKOLqnxGWWIBM4lzRBlxcva2ZTztO8bTcWPmDSpkErWx0bSP4pdsjNH8kiHAUPaT06UXcb+vOEZH+HpQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
